gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test6883.d
version https://git-lfs.github.com/spec/v1
oid sha256:83a9d2c3109f3fc8af544f67b168ecea216e4851e052a41a5c3691e662eefc9d
size 584
